# sys-sensor

./: .gitignore  README.md  admin_test_guide.md  fix_script.ps1  nvme_rel.json  package-lock.json  package.json  package.json.fix  package.json.new  plan.md  run_as_admin.bat  test-portable.ps1  test_network_fixes.ps1  verify-85-tests.ps1  vite.config.ts  启动管理员模式.cmd
src-tauri/: Cargo.toml  tauri-test-report-2025-08-17-03-23-51.json  tauri-test-report-2025-08-17-03-32-26.json  tauri-test-report-2025-08-17-03-48-14.json  tauri-test-report-2025-08-17-04-02-08.json  tauri-test-report-2025-08-17-04-13-29.json  tauri-test-report-2025-08-17-04-14-00.json  tauri-test-report-2025-08-17-04-15-53.json  tauri-test-report-2025-08-17-04-17-46.json  tauri-test-report-2025-08-17-12-56-20.json  tauri-test-report-2025-08-17-13-21-18.json  tauri-test-report-2025-08-17-13-22-49.json  tauri-test-report-2025-08-17-14-10-05.json  tauri-test-report-2025-08-17-14-10-05.md  tauri-test-report-2025-08-17-15-41-15.json  tauri-test-report-2025-08-17-15-41-15.md  tauri-test-report-2025-08-17-15-54-58.json  tauri-test-report-2025-08-17-15-54-58.md  tauri-test-report-2025-08-17-20-49-42.json  tauri-test-report-2025-08-17-20-49-42.md  tauri-test-report-2025-08-17-20-54-52.md  tauri.conf.json
src-tauri/src/: battery_utils.rs  bridge_manager.rs  bridge_types.rs  config_utils.rs  gpu_utils.rs  history_store.rs  lib.rs  lib_backup.rs  lib_old.rs  main.rs  menu_handler.rs  network_disk_utils.rs  nvme_ioctl_utils.rs  nvme_smart_utils.rs  ping_utils.rs  power_utils.rs  powershell_utils.rs  process_utils.rs  (+15 more)
(+149 files in other folders)
