[package]
name = "sys-sensor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sys_sensor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
regex = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["clock"] }
wmi = "0.13"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_System_Power",
  "Win32_Storage_FileSystem",
  "Win32_System_Ioctl",
  "Win32_System_IO",
] }
encoding_rs = "0.8"
ureq = { version = "2", features = ["json"] }
